# brev

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile.dashboard  Dockerfile.landing  LICENSE  README.md  SECURITY.md  TRADEMARK.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-dashboard.yml  deploy-landing.yml  publish-cli.yml
backend/: Dockerfile  alembic.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  (+7 more)
backend/app/core/: config.py  database.py  rate_limit.py  security.py
backend/app/models/: api_key.py  domain.py  link.py  subscription.py  user.py
backend/app/schemas/: admin.py  api_key.py  auth.py  billing.py  domain.py  link.py  user.py
backend/app/services/: admin.py  api_keys.py  auth.py  billing.py  domains.py  links.py
backend/tests/: test_api.py
cli/: README.md  pyproject.toml
cli/src/brev/: __init__.py  __main__.py  cli.py  client.py  config.py
dashboard/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/api/: client.js
dashboard/src/components/: AdminPanel.jsx  ApiKeyPanel.jsx  BillingPanel.jsx  CreateLinkModal.jsx  DomainPanel.jsx  Layout.jsx  LinkCard.jsx  ProtectedRoute.jsx
dashboard/src/pages/: Dashboard.jsx  Login.jsx  Register.jsx
landing/: astro.config.mjs  nginx.conf  package-lock.json  package.json
landing/src/pages/: index.astro
