[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "brev-cli"
version = "0.1.0"
description = "Brev — URL shortener CLI. Zero dependencies."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["url-shortener", "cli", "brev", "short-links"]
authors = [
    {name = "Matteo Genovese"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP",
]

[project.scripts]
brev = "brev.cli:main"

[tool.setuptools.packages.find]
where = ["src"]